# kepco

./: .gitignore  CAMERA_FIX_NOTES.md  FINAL_CONFIG.md  QUICKSTART.md  README.md  app.py  app_web.py  data.yaml  diagnose_camera.py  monitor_bottleneck.sh  requirements.txt  reset_camera.sh  start_app.sh  stop_app.sh  test_camera_cleanup.py  test_npu_inference.py
BIXPO/: README.md
BIXPO/live-demo/: .gitignore  KEPCO_Live_Demo_Architecture.pptx  README.md  YOLO_Inference_Pipeline_Diagram.pptx  app.py  app_web.py  graph.html  start_app.sh  stop_app.sh
BIXPO/live-demo/config/: data.yaml  requirements_web.txt
BIXPO/live-demo/docs/: CAMERA_FIX_NOTES.md  FINAL_CONFIG.md
BIXPO/live-demo/utils/: diagnose_camera.py  monitor_bottleneck.sh  reset_camera.sh  test_camera_cleanup.py  test_falling_detection.py  test_npu_inference.py
BIXPO/web/: .gitignore  README.md  README_ko.md  build_standalone.py  index.html  index_standalone.html
BIXPO/web/assets/css/: style.css
BIXPO/web/assets/js/: script.js
BIXPO/web/data/: npu_data.json
cctv_solution/frontend/: README.md  README_ko.md  build_standalone.py  gpu_data.json  index.html  index_standalone.html  script.js  style.css
templates/: index.html
triton/: .env.example  .gitignore  BRANCH_NOTES.md  JPEG_ENSEMBLE_README.md  README.md  create_perf_data.py  image_output.json  load_test.py  requirements.txt  start_all.sh  start_simple.sh  stop.sh
triton/client/: client.py  config.py  protocol_comparison.py
triton/client/cpp_client/: ARCHITECTURE.md  CMakeLists.txt  README.md  build.sh  config.h  grpc_client.cpp  grpc_client.h  grpc_service.grpc.pb.cc  grpc_service.grpc.pb.h  grpc_service.pb.cc  grpc_service.pb.h  grpc_service.proto  main.cpp  test_multi_video.sh  triton_client.cpp  triton_client.h  utils.cpp  utils.h  yolo_postprocess.cpp  yolo_postprocess.h  yolo_preprocess.cpp  yolo_preprocess.h
triton/client/media/: .gitkeep
triton/client/python_client/: ENSEMBLE_README.md  README.md  config.py  main.py  main_concurrent.py  main_concurrent_simple.py  requirements.txt  setup.py
triton/client/python_client/utils/: __init__.py  models.py  processing.py  visualization.py
triton/docs/: PERFORMANCE.md  README_MULTI_VIDEO.md
triton/gpu_backend/preprocessor/: config.pbtxt
triton/gpu_backend/preprocessor/1/: model.py
triton/gpu_backend/yolov11/: config.pbtxt
triton/gpu_backend/yolov11/1/: model.py
triton/perf_data/: IMAGE_BYTES  perf_input.json
triton/rbln_backend/preprocessor/: config.pbtxt
triton/rbln_backend/preprocessor/1/: model.py
triton/rbln_backend/yolov11/: config.pbtxt
triton/rbln_backend/yolov11/1/: coco128.yaml  model.py  model_async.py
triton/rbln_backend/yolov11_ensemble/: config.pbtxt
